# TARS

./: .gitignore  README.md  dockerfile  sensor  sensor.c  spacecraft_internal_pressure_value.txt
13-09/: client.kt  server3.py
18-10/: reminder.md
18-10/rpc/: receiver.py  sender.kt
18-10/socket/: receiver.py  sender.kt
20-09/DistributedSystem/: DistributedSystem.sln  docker-compose.yml
20-09/Sistema de VRRP/: client.py  load_balancer.py  server1.py  server2.py  server3.py
20-09/exercises/: client.kt  health_check.py  ideal_weight.py  load_balancer.py  server1.py  server2.py  server3.py
Lista-1/: reminder.md
Lista-1/ex7/rpc/server/: Cargo.toml  build.rs
Lista-1/ex7/rpc/server/src/: client.rs  server.rs
SpaceshipMonitoringSystem/: docker-compose.yml
SpaceshipMonitoringSystem/Analysis/: Analysis.csproj  Dockerfile  Program.cs  appsettings.Development.json
SpaceshipMonitoringSystem/AnalysisService/: AnalysisService.csproj  AnalysisService.http  Program.cs
SpaceshipMonitoringSystem/Houston/: Dockerfile  Houston.csproj  Houston.http  IMessageProducer.cs  Program.cs  RabbitMQProducer.cs  appsettings.Development.json  appsettings.json
SpaceshipMonitoringSystem/NotificationSystem/: NotificationSystem.csproj  NotificationSystem.http  Program.cs  appsettings.Development.json
SpaceshipMonitoringSystem/SpaceshipInterface/: Dockerfile  Program.cs  appsettings.json  (+2 more)
sensors/: reminder.md  simple_example.c  simple_publisher  temperature_sensor  temperature_sensor.c  temperatures.txt
sockets/: client.kt  load_balancer.py  server1.py  server2.py  server3.py
(+235 files in other folders)
