[package]
name = "sender"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "retirement-server"
path = "src/server.rs"

[[bin]]
name = "retirement-client"
path =  "src/client.rs"

[dependencies]
tonic = "0.12.3"
prost = "0.13.3"
tokio = {version = "1.40.0", features = ["macros", "rt-multi-thread"]}


[build-dependencies]
tonic-build = "0.12.3"